feat: update order list filter field
